# BuildALocalhost

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  install.sh  pyproject.toml  requirements.txt
catalogs/: auth.yaml  compatibility.yaml  endpoints.yaml  hardware.yaml  mcp_servers.yaml  models.curated.yaml  rag.yaml  roles.yaml  security.yaml  serving_engines.yaml  webuis.yaml
configs/eval/: example-golden.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  GAPS.md  INSTALLER.md  SECURITY.md  STRUCTURE.md  TESTING.md
installer/: __init__.py  __main__.py  benchmark.py  capacity.py  catalog.py  compose_renderer.py  detect_gpus.py  evaluate.py  hardware.py  hf_search.py  k8s_renderer.py  main.py  plugins.py  policy.py  preview.py  profile_builder.py  recommend.py  skills.py  supply_chain.py  tuning.py  validators.py  wizard.py
plugins/: README.md
plugins/example-custom-engine/: plugin.yaml
profiles/: agents_mcp.yaml  enterprise.yaml  minimal.yaml  multi_h100.yaml  multi_tenant.yaml  production.yaml  rag.yaml  rag_efficient.yaml  routing.yaml
scripts/: backup.sh  bootstrap-tenants.sh  generate-sbom.sh  healthcheck.sh  nccl-test.sh  offline-bundle.sh  pin-images.sh  restore.sh  rollback.sh  scan-images.sh  update.sh  verify-signatures.sh
skills/: README.md
skills/code-review/: skill.yaml
skills/jira-tool/: skill.yaml
templates/: authelia.yml.j2  docker-compose.yml.j2  env.j2  litellm.config.yaml.j2  mcp-policies.yaml.j2  policy.yaml.j2  prometheus.yml.j2  rag-config.yaml.j2  skills.yaml.j2  traefik-dynamic.yml.j2
tests/: test_smoke.py
(+9 files in other folders)
