[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stack-builder"
version = "0.1.0"
description = "Universal AI Stack Builder — interactive AI infrastructure profile generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7",
  "questionary>=2.0",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "requests>=2.31",
  "huggingface_hub>=0.25",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.560"]

[project.scripts]
ai-stack = "installer.main:app"

[tool.setuptools]
packages = ["installer"]

[tool.ruff]
line-length = 100
target-version = "py310"
